# weather-api

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
weather_api/: database.py  main.py
weather_api/utils/: logger.py
