[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Amirr95 <arrezvaniyan@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.0"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
